make-a-wish-salesforce/src/objects/cg__SUrl__c.object
<CustomObject>
    <description>S-Drive App Short URL Object</description>
    <fields>
        <fullName>cg__Expiration_Date__c</fullName>
        <description>Expiration Date of short Url.</description>
        <inlineHelpText>Expiration Date of short Url.</inlineHelpText>
        <label>Expiration Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>cg__File_Ids__c</fullName>
        <label>File Ids</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>cg__Hits__c</fullName>
        <label>Hits</label>
        <summaryForeignKey>cg__SUrl_Hit__c.cg__SUrl__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>cg__IP_Range__c</fullName>
        <label>IP Range</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Is_Accessible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Accessible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Is_Creatable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Creatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Is_Deletable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Deletable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Is_Open__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Open</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Is_Public_Share__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Public Share</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Is_Updatable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Updatable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>cg__Object_File_Name__c</fullName>
        <label>Object File Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Object_File_Prefix__c</fullName>
        <label>Object File Prefix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Object_Id__c</fullName>
        <description>S-Drive File Objects Id which link referans</description>
        <label>Object Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Object_Name__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Object_Relationship_Name__c</fullName>
        <label>Object Relationship Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Object_Type__c</fullName>
        <description>S-Drive File Object Type</description>
        <label>Object Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Password_Encrypted__c</fullName>
        <description>Password field Encrypted form</description>
        <label>Password Encrypted</label>
        <length>175</length>
        <maskChar>asterisk</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>cg__Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__SUrl_Id__c</fullName>
        <description>Random URL ID</description>
        <label>SUrl Id</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__Short_URL__c</fullName>
        <label>Short URL</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cg__URL__c</fullName>
        <description>Original Long URL of file.</description>
        <inlineHelpText>Original Long URL of file.</inlineHelpText>
        <label>URL</label>
        <length>2047</length>
        <type>LongTextArea</type>
    </fields>
    <label>SUrl</label>
    <listViews>
        <fullName>cg__All</fullName>
        <columns>NAME</columns>
        <columns>cg__SUrl_Id__c</columns>
        <columns>cg__Object_File_Name__c</columns>
        <columns>cg__Object_Relationship_Name__c</columns>
        <columns>cg__Is_Public_Share__c</columns>
        <columns>cg__Object_Id__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>cg__File_Ids__c</columns>
        <columns>cg__Hits__c</columns>
        <columns>cg__IP_Range__c</columns>
        <columns>cg__Short_URL__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>cg__SUrl_Id__c</field>
            <operation>equals</operation>
            <value>hijk1x</value>
        </filters>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>A-{00000000}</displayFormat>
        <label>SUrl Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SUrls</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>